--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ description="Portfolio de Juan Carlos Fornieles, desarrollador web recien titula
 							fornielesjc@gmail.com
 					</SocialPill>
 				</div>
-					<SocialPill href="../../public/Curriculum_juancarlos.pdf">
+					<SocialPill href="/Curriculum_juancarlos.pdf" target="_blank" rel="noopener noreferrer">
 						<CV class="size-4 md:size-6"></CV>
 							Descarga mi CV
 					</SocialPill>
