--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title,description } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		color-scheme:light dark;
+		color-scheme:dark;
 
 	}
 	html {
